[package]
name = "ai-ab-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.1"
actix-web = "4.4.1"
env_logger = "0.11.1"
hex = { version = "0.4.3", features = ["serde"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls"] }
toml = "0.8.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
log = "0.4.20"
serde_json = "1"
ring = "0.17.7"
futures = "0.3.30"
actix-files = "0.6.5"
