[package]
name = "ai-ab-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.12.1"
env_logger = "0.11.6"
hex = { version = "0.4.3", features = ["serde"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls"] }
toml = "0.9.11"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
log = "0.4.29"
serde_json = "1"
ring = "0.17.14"
futures = "0.3.31"
actix-files = "0.6.9"
